--- a/_includes/section-featured.html
+++ b/_includes/section-featured.html
@@ -6,7 +6,7 @@
   </div>
 {%- endif -%}
 
-{%- for post in site.posts -%}
+{%- for post in site.posts limit: 1 -%}
   {%- if post.tags contains 'featured' -%}
     <div class="uk-container uk-margin-medium-bottom">
       {% include content-media-left-1-2.html %}
