--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <div class="uk-section uk-section-xsmall">
         <a class="uk-logo uk-margin-small-top uk-display-inline-block" href="{{ "/" | relative_url }}">
           {% if site.logo_image.dark %}
-            <img src="{{ site.uploads | absolute_url }}{{ site.logo_image.dark }}" alt="{{ site.title }}" style="width: 4em">
+            <img src="{{ site.uploads | absolute_url }}{{ site.logo_image.dark }}" alt="{{ site.title }}" class="img-logo">
           {% else %}
             {{ site.title }}
           {% endif %}
