--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@
 // 3. Custom mixin overwrites.
 @import "theme/mixins";
 @import "theme/_sharer";
+@import "theme/_custom";
 
 // 4. Import UIkit.
 @import "theme/uikit";
