updates to bible

--- a/_layouts/bible.html
+++ b/_layouts/bible.html
@@ -6,8 +6,13 @@
     <div class="uk-container uk-container-xsmall uk-margin-medium-bottom uk-margin-large-top">
         <div class="uk-text-lead uk-margin-medium-bottom">
           <h1>{{page.book}} {{page.chapters.chapter}}</h1>
+          {% if page.podcast %}
           <hr/>
+          <div>
           {{page.podcast}}
+          </div>
+          <hr/>
+          {% endif %}
         <div class="col-md-8 mx-auto">
           {% for item in page.chapters %}
           {% if item.chapter %}<h5>Chapter {{item.chapter}}</h5>{% endif %}
