--- a/_includes/content-media-left-1-2.html
+++ b/_includes/content-media-left-1-2.html
@@ -18,7 +18,7 @@
           {% if post.id and post.categories %}
             <div class="uk-text-uppercase article-title-font card-categories">
               {% for category in post.categories %}
-                  <a class="link-primary" href="/category/{{ category }}">{{category}}</a>
+                  <a class="link-primary" {% if category == 'The Nightly Wind Down'%} href="/category/{{ category | replace: ' ','-' | downcase | remove: 'the-' }}" {% else %} href="/category/{{ category | replace: ' ','-' | downcase }}" {% endif %}>{{category}}</a>
                   {% unless forloop.last %}{% endunless %}
               {% endfor %}
             </div>
