--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
         <div class="uk-text-uppercase">
           {% if page.id and page.categories %}
               {% for category in page.categories %}
-                  <a class="link-primary" href="/category/{{ category }}">{{category}}</a>
+                  <a class="link-primary" {% if category == 'The Nightly Wind Down'%} href="/category/{{ category | replace: ' ','-' | downcase | remove: 'the-' }}" {% else %} href="/category/{{ category | replace: ' ','-' | downcase }}" {% endif %}>{{category}}</a>
                   {% unless forloop.last %}{% endunless %}
               {% endfor %}
           {% endif %}
@@ -41,7 +41,12 @@ layout: default
 
       <h1 class="uk-article-title uk-margin-small-top uk-margin-bottom article-title-font">{{ page.title | escape }}</h1>
 
+      {% if page.embed %}
+      {{ page.embed }}
+      {% endif %}
+
       {% if page.description %}
+
         <p class="uk-text-large"><i>{{ page.description }}</i></p>
       {% endif %}
 
