--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -91,3 +91,5 @@ layout: default
   {% include disqus-comments.html %}
 </div>
 {% endif %}
+
+{% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
