--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -22,5 +22,7 @@ layout: default
 
     {% endfor %}
 
+    {% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
+
 </div>
 
