--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,9 @@ layout: default
       <h1 class="uk-article-title uk-margin-small-top uk-margin-bottom article-title-font">{{ page.title | escape }}</h1>
 
       {% if page.embed %}
-      {{ page.embed }}
+      <div style="width:100%; height:200px; display:flex;">
+        {{ page.embed }}
+      </div>
       {% endif %}
 
       {% if page.description %}
