change blog to archive in files

--- a/_includes/section-latest.html
+++ b/_includes/section-latest.html
@@ -15,7 +15,7 @@
   {% endfor %}
 
   <div class="uk-margin-medium uk-text-center">
-    <a class="hvr-forward" href="/blog/">{{ include.more | default: 'More Articles' }} &rarr;</a>
+    <a class="hvr-forward" href="/archive/">{{ include.more | default: 'More Articles' }} &rarr;</a>
   </div>
 
 </div>
