--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -1,11 +1,15 @@
-{% if site.social_networks.twitter %}
+{% if site.social_networks.x %}
 <div class="uk-first-column">
-    <a href="{{ site.social_networks.twitter }}" data-uk-icon="icon: twitter; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank"></a>
+    <a href="{{ site.social_networks.x }}" data-uk-icon="icon: x; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank">
+        <svg width="16" height="16" viewBox="0 0 20 20"><path d="m15.08,2.1h2.68l-5.89,6.71,6.88,9.1h-5.4l-4.23-5.53-4.84,5.53H1.59l6.24-7.18L1.24,2.1h5.54l3.82,5.05,4.48-5.05Zm-.94,14.23h1.48L6,3.61h-1.6l9.73,12.71h0Z"/></svg>
+    </a>
 </div>
 {% endif %}
-{% if site.social_networks.facebook %}
+{% if site.social_networks.tiktok %}
 <div>
-    <a href="{{ site.social_networks.facebook }}" data-uk-icon="icon: facebook; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank"></a>
+    <a href="{{ site.social_networks.tiktok }}" data-uk-icon="icon: tiktok; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank">
+        <svg width="16" height="16" viewBox="0 0 20 20"><path d="M17.24,6V8.82a6.79,6.79,0,0,1-4-1.28v5.81A5.26,5.26,0,1,1,8,8.1a4.36,4.36,0,0,1,.72.05v2.9A2.57,2.57,0,0,0,7.64,11a2.4,2.4,0,1,0,2.77,2.38V2h2.86a4,4,0,0,0,1.84,3.38A4,4,0,0,0,17.24,6Z"/></svg>
+    </a>
 </div>
 {% endif %}
 {% if site.social_networks.flickr %}
