--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -2,36 +2,71 @@
 layout: default
 ---
 
-<div class="uk-container uk-margin-medium-bottom uk-margin-xlarge-top">
-  <hr class="uk-margin-remove-top">
-  <h1 class="uk-text-center uk-margin uk-article-title article-title-font">{{ page.tag }}</h1>
-  <hr class="uk-margin-remove">
-</div>
-
 {% assign category_posts = site.categories[page.tag] %}
-{% if category_posts %}
-{% assign recentPost = category_posts | sort: "number" | first %}
-<div class="uk-container uk-container-small uk-margin-medium-bottom">
-    {% assign post = recentPost %}
-    {% if post %}
-    {% include content-media-left-1-2.html %}
-    {% endif %}
-    {% endif %}
 
+{% assign subcategories = "" %}
+{% for post in category_posts %}
+    {% for category in post.categories %}
+        {% unless category == "Meditations" or category == "Life" or category == "Carpe Diem" or category == "Health" or category == "Moments" or category == "Difficulty" or category == "Sports & rec" or category == "Virtues" %}
+            {% assign subcategories = subcategories | append: category | append: ", " %}
+        {% endunless %}
+{% endfor %}
+{% endfor %}
+{% assign subcategories = subcategories | split: "," | uniq | sort %}
 
-    {% if category_posts %}
-    {% assign sorted_posts = category_posts | sort: "categories[2]" %}
+<div class="uk-container uk-container-xsmall uk-margin-medium-bottom uk-margin-large-top">
+    <div class="uk-text-lead uk-margin-medium-bottom" uk-filter=".js-filter">
+        <h1>{{page.tag}}</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <hr/>
+        <div class="uk-container uk-margin-large-top uk-margin-medium-bottom">
+            <div class="uk-inline">
+                <a type="button" class="uk-button uk-button-default">Categories</a>
+                <div uk-dropdown="mode: click; animation: slide-top; animate-out: true" class="uk-width-large uk-drop uk-dropdown">
+                    <div class="">
+                        {% assign items_per_section = 8 %}
+                        {% assign total_sections = subcategories.size | divided_by: items_per_section | ceil %}
+                        {% for section_index in (0..total_sections) %}
+                        <ul class="uk-nav uk-dropdown-nav uk-subnav-pill">
+                            {% if section_index == 0%}
+                            <li class="all-button" uk-filter-control><a href="#">All</a></li>
+                            {% endif %}
+                            {% assign offset = section_index | times: items_per_section %}
+                            {% for subcategory in subcategories offset: offset limit: items_per_section %}
+                            {% unless subcategory == " " %}
+                            <li uk-filter-control=".{{subcategory | strip}}"><a href="#">{{subcategory}}</a></li>
+                            {% endunless %}
+                            {% endfor %}
+                        </ul>
+                        {% endfor %}
+                    </div>
 
-    <hr class="uk-margin-remove-top">
+                </div>
+            </div>
+            <ul class="js-filter uk-grid-small uk-child-width-1-3@s uk-child-width-1-3@m uk-child-width-1-3@l uk-grid-match" uk-grid>
+                {% if category_posts %}
+                {% assign sorted_posts = category_posts | sort: category[2] %}
 
-    {% for post in sorted_posts limit: 29 %}
-
-    {% include content-media-left-1-3.html %}
-
-    {% endfor %}
-    {% else %}
-    <p>No posts have been made to this category yet. Check out our other content!</p>
-    {% endif %}
-    {% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
-
+                {% for post in sorted_posts %}
+                {% if forloop.index >= 30 %}
+                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} more-content post-item" data-category="{{post.categories | join: ' '}}" hidden>
+                    <a href="{{ post.url | relative_url }}" class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-center uk-flex-middle" style="min-height: 249.39px">{% if post.image %}<img src="{{ post.image }}" class="uk-card-media-top">{% endif %}</a>
+                    <a class="uk-h4 uk-text-center uk-text-middle uk-margin-small-top uk-margin-medium-bottom" href="{{ post.url | relative_url }}">{{ post.title }}</a>
+                </li>
+                {% else %}
+                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} post-item" data-category="{{post.categories | join: ' '}}">
+                    <a href="{{ post.url | relative_url }}" class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-center uk-flex-middle" style="min-height: 249.39px">{% if post.image %}<img src="{{ post.image }}" class="uk-card-media-top">{% endif %}</a>
+                    <a class="uk-h4 uk-text-center uk-text-middle uk-margin-small-top uk-margin-medium-bottom" href="{{ post.url | relative_url }}">{{ post.title }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
+            </ul>
+            <div class="uk-text-center">
+                <a class="loadmore-button uk-button uk-button-default" uk-toggle="target: .more-content" onclick="this.style.display='none'">LOAD MORE CONTENT</a>
+            </div>
+        </div>
+    </div>
+{% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
 </div>
+<script src="/assets/js/custom.js"></script>
