Updated category dropdown with new js features, ect.

--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -1,5 +1,5 @@
 // Modify primary template color
-$global-primary-background: #de7a93;
+$global-primary-background: #0d9488;
 // Modify body font
 $global-font-family: 'Lora', serif; 
 // Modify article title font
