--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -20,27 +20,30 @@ layout: default
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <hr/>
         <div class="uk-container uk-margin-large-top uk-margin-medium-bottom">
-            <div class="uk-inline">
-                <a type="button" class="uk-button uk-button-default">Categories</a>
-                <div uk-dropdown="mode: click; animation: slide-top; animate-out: true" class="uk-width-large uk-drop uk-dropdown">
-                    <div class="">
-                        {% assign items_per_section = 8 %}
-                        {% assign total_sections = subcategories.size | divided_by: items_per_section | ceil %}
-                        {% for section_index in (0..total_sections) %}
-                        <ul class="uk-nav uk-dropdown-nav uk-subnav-pill">
-                            {% if section_index == 0%}
-                            <li class="all-button" uk-filter-control><a href="#">All</a></li>
-                            {% endif %}
-                            {% assign offset = section_index | times: items_per_section %}
-                            {% for subcategory in subcategories offset: offset limit: items_per_section %}
-                            {% unless subcategory == " " %}
-                            <li uk-filter-control=".{{subcategory | strip}}"><a href="#">{{subcategory}}</a></li>
-                            {% endunless %}
+            <div class="uk-flex uk-flex-center uk-flex-left@l">
+                <div class="uk-inline uk-padding-small uk-padding-remove-left uk-padding-remove-right uk-margin-medium-bottom">
+                    <a type="button" class="uk-button uk-button-default">Categories</a>
+                    <div id="responsive-dropdown" uk-dropdown="mode: click; animation: slide-top; animate-out: true; pos: bottom-center;" class="u large-dropdown-section">
+                        <div class="uk-width-1-1@l uk-child-width-1-3@l uk-width-1-1@s uk-child-width-1-1@s" uk-grid>
+                            {% assign items_per_section = 6 %}
+                            {% assign total_sections = subcategories.size | divided_by: items_per_section | ceil %}
+                            {% for section_index in (0..total_sections) %}
+                            <div>
+                                <ul class="uk-nav uk-dropdown-nav">
+                                    {% if section_index == 0%}
+                                    <li class="all-button" uk-filter-control><a href="#">All</a></li>
+                                    {% endif %}
+                                    {% assign offset = section_index | times: items_per_section %}
+                                    {% for subcategory in subcategories offset: offset limit: items_per_section %}
+                                    {% unless subcategory == " " %}
+                                    <li uk-filter-control=".{{subcategory | strip}}"><a href="#">{{subcategory}}</a></li>
+                                    {% endunless %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
                             {% endfor %}
-                        </ul>
-                        {% endfor %}
+                        </div>
                     </div>
-
                 </div>
             </div>
             <ul class="js-filter uk-grid-small uk-child-width-1-3@s uk-child-width-1-3@m uk-child-width-1-3@l uk-grid-match" uk-grid>
