--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -8,7 +8,7 @@ layout: default
 {% for post in category_posts %}
     {% for category in post.categories %}
         {% unless category == "Meditations" or category == "Life" or category == "Carpe Diem" or category == "Health" or category == "Moments" or category == "Difficulty" or category == "Sports & rec" or category == "Virtues" %}
-            {% assign subcategories = subcategories | append: category | append: ", " %}
+            {% assign subcategories = subcategories | append: category | append: "," %}
         {% endunless %}
 {% endfor %}
 {% endfor %}
@@ -34,9 +34,13 @@ layout: default
                                     <li class="all-button" uk-filter-control><a href="#">All</a></li>
                                     {% endif %}
                                     {% assign offset = section_index | times: items_per_section %}
+                                    {% assign already_rendered = "" %}
                                     {% for subcategory in subcategories offset: offset limit: items_per_section %}
-                                    {% unless subcategory == " " %}
+
+                                    {% unless subcategory == " " or already_rendered contains subcategory %}
                                     <li uk-filter-control=".{{subcategory | strip}}"><a href="#">{{subcategory}}</a></li>
+                                    {% assign already_rendered = already_rendered | append: subcategory | append: "," %}
+
                                     {% endunless %}
                                     {% endfor %}
                                 </ul>
@@ -47,23 +51,27 @@ layout: default
                 </div>
             </div>
             <ul class="js-filter uk-grid-small uk-child-width-1-3@s uk-child-width-1-3@m uk-child-width-1-3@l uk-grid-match" uk-grid>
-                {% if category_posts %}
-                {% assign sorted_posts = category_posts | sort: category[2] %}
+                {% assign post_count = 0 %}
+                {% for subcategory in subcategories %}
+                {% assign stripped_subcategory = subcategory | strip %}
+                    {% assign filtered_posts = category_posts | where_exp: "post", "post.categories contains stripped_subcategory" | sort: "number" %}
+                    {% for post in filtered_posts %}
 
-                {% for post in sorted_posts %}
-                {% if forloop.index >= 30 %}
-                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} more-content post-item" data-category="{{post.categories | join: ' '}}" hidden>
+
+                    {% assign post_count = post_count | plus: 1 %}
+                    {% if post_count >= 30 %}
+                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} more-content post-item" data-category="{{post.categories | join: ' '}}" data-sort="{{post.number}}" hidden>
                     <a href="{{ post.url | relative_url }}" class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-center uk-flex-middle" style="min-height: 249.39px">{% if post.image %}<img src="{{ post.image }}" class="uk-card-media-top">{% endif %}</a>
                     <a class="uk-h4 uk-text-center uk-text-middle uk-margin-small-top uk-margin-medium-bottom" href="{{ post.url | relative_url }}">{{ post.title }}</a>
                 </li>
                 {% else %}
-                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} post-item" data-category="{{post.categories | join: ' '}}">
+                <li class="{{post.categories | join: ' ' | remove: 'Meditations' }} post-item" data-category="{{post.categories | join: ' '}}" data-sort="{{post.number}}">
                     <a href="{{ post.url | relative_url }}" class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-center uk-flex-middle" style="min-height: 249.39px">{% if post.image %}<img src="{{ post.image }}" class="uk-card-media-top">{% endif %}</a>
                     <a class="uk-h4 uk-text-center uk-text-middle uk-margin-small-top uk-margin-medium-bottom" href="{{ post.url | relative_url }}">{{ post.title }}</a>
                 </li>
                 {% endif %}
                 {% endfor %}
-                {% endif %}
+                {% endfor %}
             </ul>
             <div class="uk-text-center">
                 <a class="loadmore-button uk-button uk-button-default" uk-toggle="target: .more-content" onclick="this.style.display='none'">LOAD MORE CONTENT</a>
