--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,10 @@ layout: default
         <div class="uk-text-uppercase">
           {% if page.id and page.categories %}
               {% for category in page.categories %}
-                  <a class="link-primary" {% if category == 'The Nightly Wind Down'%} href="/category/{{ category | replace: ' ','-' | downcase | remove: 'the-' }}" {% else %} href="/category/{{ category | replace: ' ','-' | downcase }}" {% endif %}>{{category}}</a>
+              {% if category == page.categories[2] %}
+              {% continue %}
+              {% endif %}
+                  <a class="link-primary" {% if category == 'The Nightly Wind Down'%} href="/category/{{ category | replace: ' ','-' | downcase | remove: 'the-' }}" {% elsif category == "Meditations" %} href="/category/{{ category | replace: ' ','-' | downcase }}" {% elsif category != "Meditations" and page.categories[0] == "Meditations" %} href="/category/meditations/{{ category | replace: ' ','-' | downcase }}" {% else %} href="/category/{{ category | replace: ' ','-' | downcase }}" {% endif %}>{{category}}</a>
                   {% unless forloop.last %}{% endunless %}
               {% endfor %}
           {% endif %}
@@ -42,7 +45,11 @@ layout: default
       <h1 class="uk-article-title uk-margin-small-top uk-margin-bottom article-title-font">{{ page.title | escape }}</h1>
 
       {% if page.embed %}
+      {% if page.embed contains '“' or page.embed contains '”' %}
       {% assign embed = page.embed | replace: '“', '"' | replace: '”', '"' %}
+      {% else %}
+      {% assign embed = page.embed %}
+      {% endif %}
       <div style="width:100%; height:200px; display:flex;">
         {{ embed | raw }}
       </div>
