customized post layout, added new positive affirmations section

--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -13,6 +13,7 @@ layout: default
 {% endfor %}
 {% endfor %}
 {% assign subcategories = subcategories | split: "," | uniq | sort %}
+<a href="#" uk-totop uk-scroll class="uk-position-fixed uk-position-bottom-right scrollup-button"></a>
 
 <div class="uk-container uk-container-xsmall uk-margin-medium-bottom uk-margin-large-top">
     <div class="uk-text-lead uk-margin-medium-bottom" uk-filter=".js-filter">
