--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,3 +30,7 @@ iframe{
 .large-dropdown-section {
 	transition: all 0.2s ease-in-out;
 }
+.embed-container {
+	width: 100%;
+	display: flex;
+	height: 200px;
