text changes and removals

--- a/_layouts/bible.html
+++ b/_layouts/bible.html
@@ -8,7 +8,7 @@
           <h1>{{page.book}} {{page.chapters.chapter}}</h1>
           {% if page.podcast %}
           <hr/>
-          <div>
+          <div class="embed-container">
           {{page.podcast}}
           </div>
           <hr/>
