--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,6 +1,6 @@
 <div class="related">
   <hr class="uk-margin-remove-top">
-  <h2 class="section-title uk-text-center uk-margin">Suggested Articles</h2>
+  <h2 class="section-title uk-text-center uk-margin">Suggested Meditations</h2>
   <hr class="uk-margin-remove-top uk-margin-medium-bottom">
   <div class="uk-child-width-1-3@s uk-grid-medium- uk-flex-center uk-margin-medium-bottom" data-uk-grid>
     {% assign maxRelated = 3 %}
