replace homepage "Hope" Image and footer "Hope" image; replaced footer background color

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,3 +55,11 @@ iframe{
 .search-query {
 	right: auto !important;
 }
+
+.uk-background-secondary {
+	background-color: #266467 !important;
+}
+
+.footer-logo {
+	width: 25%
+}
