--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -55,7 +55,7 @@
 {% endif %}
 {% if site.social_networks.email %}
 <div>
-    <a href="mailto:{{ site.social_networks.email }}" data-uk-icon="icon: mail; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank"></a>
+    <a href="{{ site.social_networks.email }}" data-uk-icon="icon: mail; ratio: {{ include.icon_ratio }}" class="uk-icon-link uk-icon" target="_blank"></a>
 </div>
 {% endif %}
 {% if site.social_networks.website %}
