--- a/_layouts/bible.html
+++ b/_layouts/bible.html
@@ -24,5 +24,11 @@
       </div>
     </div>
     {% include footer.html %}
+
+    {% include offcanvas.html %}
+
+
+    <script src="/assets/js/vendor/uikit-icons.js"></script>
+
     </body>
 </html>
