--- a/_includes/section-latest.html
+++ b/_includes/section-latest.html
@@ -1,3 +1,4 @@
+<div class="uk-padding-large">
 {%- if include.title -%}
   <div class="uk-container uk-margin-medium-bottom">
     <hr class="uk-margin-remove">
@@ -6,16 +7,56 @@
   </div>
 {%- endif -%}
 
-<div class="uk-container uk-container-small uk-margin-medium-bottom">
+{% assign favs = "Foundation,Daily_Hope,Nightly_Wind_Down,Positive_Affirmations,Everyday_Miracles,Finding_Purpose" | split: "," %}
+{% assign favs_urls = "/category/meditations/foundations/,/category/daily-hope/,/category/nightly-wind-down/,/category/meditations/positive-affirmations/,/category/everyday-miracles/,/bible/" | split: "," %}
+{% assign favs_icons = "home,happy,eye-slash,eye,world,pencil" | split: "," %}
 
-  {% for post in site.posts | limit: include.limit %}
+<div class="uk-container uk-margin-medium-bottom">
+  <div class="uk-child-width-1-3@l" uk-grid>
+    {% for item in favs %}
+    {% assign url = favs_urls[forloop.index0] %}
+    {% assign icon = favs_icons[forloop.index0] %}
+    <a href="{{ url }}">
+      <div class="uk-card uk-card-default uk-card-body">
+        <div uk-grid>
+          <h3 class="">{{ item | replace: "_", " " }}</h3>
+          <span class="uk-position-center-right" data-uk-icon="icon: {{ icon }}; ratio: 2"></span>
+        </div>
+      </div>
+    </a>
 
-    {% include content-media-left-1-3.html %}
-
-  {% endfor %}
-
-  <div class="uk-margin-medium uk-text-center">
-    <a class="hvr-forward" href="/archive/">{{ include.more | default: 'More Articles' }} &rarr;</a>
+    {% endfor %}
   </div>
+</div>
+</div>
+
+{% comment %}
+<div class="uk-padding-large">
+<div class="uk-container uk-margin-medium-bottom">
+  <hr class="uk-margin-remove">
+  <h2 class="section-title uk-text-center uk-margin">Lets Get Social</h2>
+  <hr class="uk-margin-remove">
+</div>
+
+  <div class="uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider>
+
+    <div class="uk-slider-items uk-child-width-1-3 uk-grid">
+      {% for social_site in site.social_networks %}
+      {% assign site_name = social_site[0] %}
+      {% assign site_url = social_site[1] %}
+        <div>
+          <a class="uk-card-body" href="{{ site_url }}">
+            <div class="uk-text-center" data-uk-icon="icon: {{ site_name }}; ratio: 4"></div>
+            <h3 class="uk-text-center">{{ site_name }}</h3>
+          </a>
+        </div>
+      {% endfor %}
+    </div>
+
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous uk-slider-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href uk-slidenav-next uk-slider-item="next"></a>
 
 </div>
+
+</div>
+{% endcomment %}
