--- a/_includes/section-latest.html
+++ b/_includes/section-latest.html
@@ -30,33 +30,33 @@
 </div>
 </div>
 
-{% comment %}
-<div class="uk-padding-large">
+
+<div class="uk-padding-large social-block">
 <div class="uk-container uk-margin-medium-bottom">
   <hr class="uk-margin-remove">
-  <h2 class="section-title uk-text-center uk-margin">Lets Get Social</h2>
+  <h2 class="section-title uk-text-center uk-margin">Let's Get Social</h2>
   <hr class="uk-margin-remove">
 </div>
+  <div class="uk-slider-container-offset" uk-slider="autoplay: true; pause-on-hover: true; center: true;">
 
-  <div class="uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider>
 
-    <div class="uk-slider-items uk-child-width-1-3 uk-grid">
+  <div class="uk-position-relative uk-visible-toggle uk-slider" tabindex="-1">
+    <div class="uk-slider-items uk-child-width-1-6 uk-padding-large" uk-grid>
       {% for social_site in site.social_networks %}
       {% assign site_name = social_site[0] %}
       {% assign site_url = social_site[1] %}
-        <div>
-          <a class="uk-card-body" href="{{ site_url }}">
-            <div class="uk-text-center" data-uk-icon="icon: {{ site_name }}; ratio: 4"></div>
-            <h3 class="uk-text-center">{{ site_name }}</h3>
+      <div class="uk-card uk-card-default">
+          <a class=" uk-margin-large" href="{{ site_url }}" {% if forloop.first %} style="margin: 0px; padding: 0px; box-shadow: none;"{% endif %}>
+            <div class="uk-position-center" data-uk-icon="icon:{% unless site_name == 'email' or site_name == 'website' %} {{ site_name }}{% else %}mail{% endunless %}; ratio: 7"></div>
           </a>
-        </div>
+      </div>
       {% endfor %}
     </div>
-
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href uk-slidenav-previous uk-slider-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href uk-slidenav-next uk-slider-item="next"></a>
+    <div class="uk-align-right@l uk-align-center uk-padding-small" uk-grid>
+      <a class=" uk-position-small slider-nav-circle" href uk-slidenav-previous uk-slider-item="previous"></a>
+      <a class=" uk-position-small slider-nav-circle" href uk-slidenav-next uk-slider-item="next"></a>
+    </div>
 
 </div>
-
+  </div>
 </div>
-{% endcomment %}
