--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -81,6 +81,11 @@ layout: default
             </div>
         </div>
     </div>
-{% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
+{% assign footer_text = "" %}
+{% for item in site.data.footer %}
+{% assign footer_text = footer_text | append: item.footer-text | append: " " %}
+{% endfor %}
+
+{% include section-mailchimp.html title="Newsletter Signup" text=footer_text button_text="Support Us" %}
 </div>
 <script src="/assets/js/custom.js"></script>
