--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -85,5 +85,10 @@ layout: default
         </div>
         {% endif %}
     </div>
-    {% include section-mailchimp.html title="Newsletter Signup" text="Sign up for our weekly newsletter through Substack and stay up to date with what is happening in the city." button_text="Support Us" %}
+    {% assign footer_text = "" %}
+{% for item in site.data.footer %}
+{% assign footer_text = footer_text | append: item.footer-text | append: " " %}
+{% endfor %}
+
+{% include section-mailchimp.html title="Newsletter Signup" text=footer_text button_text="Support Us" %}
 </div>
